--- a/src/css/search-form.css
+++ b/src/css/search-form.css
@@ -33,7 +33,8 @@
   border-color: #4e75ff;
 }
 
-.form button {
+.form button,
+.load-more-btn {
   width: 91px;
   height: 40px;
   background-color: #4e75ff;
@@ -44,8 +45,19 @@
   font-weight: 500;
 }
 
-.form button:hover {
+.form button:hover,
+.load-more-btn:hover {
   background-color: #6c8cff;
+}
+
+.load-more-btn {
+  min-width: 125px;
+}
+
+.load-more {
+  display: flex;
+  justify-content: center;
+  margin-top: 32px;
 }
 
 .loader {
